--- a/src/client/player.css
+++ b/src/client/player.css
@@ -5,8 +5,35 @@
   margin-left: 1vw;
 }
 
+.file-handling {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #212121;
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  line-height: 6vh;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
 .select-file {
   width: 100%;
+  height: 6vh;
+  background-color: #000000;
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  line-height: 6vh;
+  cursor: pointer;
+}
+
+.copy-button {
+  margin-top: 0px;
+  width: 280px;
   height: 6vh;
   background-color: #212121;
   color: #fff;
@@ -14,6 +41,12 @@
   text-align: center;
   line-height: 6vh;
   cursor: pointer;
+}
+
+.video-player {
+  width: 100%;
+  height: 77dvh;
+  background-color: #000000;
 }
 
 .continue-button {
