--- a/src/client/player.css
+++ b/src/client/player.css
@@ -11,7 +11,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #212121;
   color: #fff;
   font-size: 20px;
   text-align: center;
@@ -20,15 +19,23 @@
   margin-bottom: 5px;
 }
 
-.select-file {
+.select-file-label {
   width: 100%;
   height: 6vh;
-  background-color: #000000;
+  background-color: #212121;
+  margin-right: 1vw;
   color: #fff;
   font-size: 20px;
   text-align: center;
   line-height: 6vh;
   cursor: pointer;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-color: #3f3f3f;
+}
+
+.select-file {
+  display: none;
 }
 
 .copy-button {
@@ -41,12 +48,16 @@
   text-align: center;
   line-height: 6vh;
   cursor: pointer;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-color: #3f3f3f;
 }
 
 .video-player {
   width: 100%;
   height: 77dvh;
   background-color: #000000;
+  border-radius: 0.5rem;
 }
 
 .continue-button {
@@ -59,12 +70,15 @@
   text-align: center;
   line-height: 6vh;
   cursor: pointer;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-color: #3f3f3f;
 }
 
 .steps {
-    display: flex;
-    align-items: center;
-    margin-top: 5px;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
 }
 
 .step-button {
@@ -77,6 +91,9 @@
   text-align: center;
   line-height: 6vh;
   cursor: pointer;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-color: #3f3f3f;
 }
 
 .step-button:active {
