--- a/src/client/player.css
+++ b/src/client/player.css
@@ -1,7 +1,7 @@
 .main {
   justify-content: center;
   height: 95vh;
-  width: 96vw;
+  width: 97vw;
   margin-left: 1vw;
 }
 
@@ -79,6 +79,11 @@
   display: flex;
   align-items: center;
   margin-top: 5px;
+  min-height: 6vh;
+  background-color: #151515;
+  border-radius: 0.5rem;
+  border-style: none;
+  border-color: #222222;
 }
 
 .step-button {
